After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752992 - matroska: fix minor tag string leak
matroska: fix minor tag string leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-29 04:43 UTC by Vineeth
Modified: 2015-08-16 13:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix memory leak (1.29 KB, patch)
2015-07-29 04:44 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-07-29 04:43:43 UTC
after adding to tag list key_val is not being freed resulting in memory leak
Comment 1 Vineeth 2015-07-29 04:44:27 UTC
Created attachment 308353 [details] [review]
fix memory leak
Comment 2 Tim-Philipp Müller 2015-07-29 08:17:28 UTC
Thanks, pushed:

commit 72b86ae8686932832d57bc6f6e45645f9c2d8243
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Wed Jul 29 13:43:50 2015 +0900

    matroska: fix memory leak
    
    After adding to tag list, key_val is not being free'd
    resulting in memory leak
    
    https://bugzilla.gnome.org/show_bug.cgi?id=752992